--- a/about.html
+++ b/about.html
@@ -3,8 +3,6 @@
 
 <!-- BOOTSTRAP CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<!-- MAIN CSS -->
-<link rel="stylesheet" href="./css/main.css">
 
 <head>
     <meta charset="UTF-8">
@@ -28,15 +26,16 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">FAQ</a>
+          <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
     </div>
   </nav>
-  <h1> THIS IS home PAGE</h1>
+
+  <h1> THIS IS ABOUT PAGE</h1>
 <!-- nav bar code-->
 
 <!-- JQUERY -->
