--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- BOOTSTRAP CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <!-- MAIN CSS -->
-<!-- ADDED A NEW COMMENT -->
+<!-- ADDED A NEW COMMENT IN BRANCH -->
 <link rel="stylesheet" href="./css/main.css">
 
 <head>
