--- a/index.html
+++ b/index.html
@@ -2,48 +2,146 @@
 <html lang="en">
 
 <!-- BOOTSTRAP CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<!-- MAIN CSS -->
-<!-- ADDED A NEW COMMENT IN BRANCH -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<!-- ICONS CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+crossorigin="anonymous" />
+<!-- CUSTOM CSS -->
 <link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="./css/home.css">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THP Website</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>THP Website</title>
 </head>
+
 <body>
-<!-- nav bar code-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+
+  <!-- nav bar -->
+  <div class="container">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style = "background-color: white;">
+      <a class="navbar-brand" href="index.html"><img style = "width: 300px;" src="assets/qc_thp_logo.png" class=".img"
+          alt="THP Logo"></a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <!-- nav bar -->
+
+  <!-- main section-->
+  <header class="masthead">
+    <div class="container h-100">
+      <div class="row h-100">
+        <div class="col-lg-7 my-auto">
+          <div class="header-content mx-auto special-text">
+            <h1 class="mb-5">THP offers scholarships and academic support for highly motivated and creative prospective
+              students!</h1>
+            
+          </div>
+        </div>
+        <div class="col-lg-5 my-auto">
+            <a href="about.html" class="btn btn-outline btn-xl js-scroll-trigger">Check Requirements</a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </header>
+
+  <section class="features" id="features">
+    <div class="container">
+      <div class="section-heading text-center">
+        <h2 class = "special-text">Enhancing the educational experience</h2>
+        <hr>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 my-auto">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="feature-item special-text">
+                  <i class="fas fa-desktop text-primary"></i>
+                  <h3>Priority Registration</h3>
+                  <p >Register to competitive classes weeks before regular registration!</p>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="feature-item special-text">
+                  <i class="far fa-money-bill-alt text-primary"></i>
+                  <h3>Monetary Award</h3>
+                  <p >THP provides scholarships at three levels: $1,000, half tuition, and full tuition!</p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="feature-item special-text">
+                  <i class="fas fa-user-friends text-primary"></i>
+                  <h3>Peer Support/Mentor</h3>
+                  <p >Join a network of awesome students willing to help you transition smoothly!</p>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="feature-item special-text">
+                  <i class="far fa-calendar-check text-primary"></i>
+                  <h3>Exclusive Events</h3>
+                  <p >Be invited to special events with special speakers and important information!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- main section-->
+
+  <!-- footer section -->
+  <footer>
+    <div class="container">
+      <p>&copy; QC THP 2021. All Rights Reserved.</p>
+      <ul class="list-inline">
+        <li class="list-inline-item">
+          <a href="http://transfer.qc.cuny.edu/explore-queens/honors/">Other Site</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+        <li class="list-inline-item">
+          <a href="https://www.qc.cuny.edu/Pages/home.aspx">Queens College</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">FAQ</a>
+        <li class="list-inline-item">
+          <a href="https://www.cuny.edu/">CUNY</a>
         </li>
       </ul>
     </div>
-  </nav>
-  <h1> THIS IS home PAGE</h1>
-<!-- nav bar code-->
+  </footer>
+  <!-- footer section -->
 
-<!-- JQUERY -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- BOOTSTRAP JS + POPPERS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
+
+  <!-- JQUERY -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- BOOTSTRAP JS + POPPERS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+  </script>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
