Updated picture file name, wasn't working

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 	  <h1>Transfer Honors Program</h1>      
 	  <p>The Queens College Transfer Honors Program (THP) offers scholarships and academic support for highly motivated and creative prospective students who wish to complete their bachelor’s degree at a world-class college that challenges them to do their best. THP provides scholarships at three levels: $1,000, half tuition, and full tuition (NY resident tuition rate). THP students join a community of learners who enjoy honors classes that are small in size and emphasize discussion and projects over lecture. The program provides dedicated academic advisors who support students in making the transition to QC, identifying mentors, submitting successful applications for internal awards, and preparing for graduate study or career placement. THP enhances the educational experience by helping students to identify opportunities for internships, advanced research, study abroad, and other individualized projects. Participants receive priority consideration to competitive majors and honors programs, priority registration for classes, and preferred consideration for on-campus housing. Newly admitted THP students receive peer support, and later become peer mentors.</p>
 		<h3>Dr. Lori Yamato</h3>
-		<img src="assets/loriyamato.jpg" class=".img" alt="Lori Yamato">
+		<img src="assets/LoriYamato.jpg" class=".img" alt="Lori Yamato">
 		<p> Director
 		<br><a href="mailto:lori.yamato@qc.cuny.edu">Email: lori.yamato@qc.cuny.edu</p></a>
 		<h3>Selma Skrijelj</h3>
