finished mock website

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 
 <body>
   <div id="navbar">
-    <a class = "nav__item" href="index.html">FAQ</a>
-    <a class = "nav__item" href="index.html">Contact</a>
-    <a class = "nav__item" href="#second-section">About</a>
-    <a class = "nav__item active_custom" href="#first-section">Home</a>
+    <a class="nav__item" href="apply.html">Apply</a>
+    <a class = "nav__item" href="faq.html">FAQ</a>
+    <a class = "nav__item" href="contact.html">Contact</a>
+    <a class = "nav__item" id="about-link" href="#second-section">About</a>
+    <a class = "nav__item active_custom" id ="home-link" href="#first-section">Home</a>
   </div>
   <div id="fullpage">
     <div class="section first" data-anchor="first-section">
@@ -59,8 +60,8 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="btn-column my-auto mx-auto">
-              <a href="#second-section" class="btn btn-outline btn-xl">Learn More</a>
-              <a href="about.html" class="btn btn-outline btn-xl">Apply Now</a>
+              <a id = "learn-more" href="#second-section" class="btn btn-outline btn-xl">Learn More</a>
+              <a href="apply.html" class="btn btn-outline btn-xl">Apply Now</a>
             </div>
           </div>
         </div>
@@ -68,8 +69,8 @@
     </div>
     <div class="section second" data-anchor="second-section">
       <div class="container">
-        <div class="section-heading text-center">
-          <h2 class="special-text">Enhancing the Educational Experience</h2>
+        <div class="header-content mx-auto special-text" style="margin: 20px 0px;">
+          <h1 >Enhancing the Educational Experience</h1>
         </div>
         <div class="row">
           <div class="col-lg-12 my-auto">
@@ -154,6 +155,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
 </script>
-<script src="js/main.js"></script>
-
+<script src="js/home.js"></script>
 </html>
