--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   <meta http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>THP Website</title>
+  <link rel="shortcut icon" type="image/jpg" href="assets/qc_thp_logo.png"/>
+
 </head>
 
 <body>
