fixed mobile responsiveness

--- a/apply.html
+++ b/apply.html
@@ -53,7 +53,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <div class="general-content my-auto mx-auto">
+                        <div class="general-content first mx-auto">
                             <h1 class="h1">IMPORTANT UPDATES</h1>
                             <p> The priority application deadline has been extended to <b>May 7, 2021</b> for students
                                 entering Queens College in Fall 2021. Applications received after the priority deadline
