--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="header-content my-auto mx-auto special-text">
+                        <div class="header-content first mx-auto special-text">
                             <h1>Contact Us</h1>
                         </div>
                     </div>
