--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="header-content my-auto mx-auto special-text">
+            <div class="header-content first mx-auto special-text">
               <h1 >THP offers scholarships and academic support for highly motivated and creative
                 prospective
                 students!</h1>
