fixed contact time bug

--- a/contact.html
+++ b/contact.html
@@ -108,8 +108,10 @@
                             <div class="card">
                                 <h1>Office Hours</h1>
                                 <div class="card-body">
-                                  <p class="card-text">Monday: 12pm – 5pm &emsp; Tuesday: 12pm – 5pm</p>
-                                  <p class="card-text">Wednesday: 12pm – 5pm &emsp; Thursday: 12pm – 5pm</p>
+                                  <p class="card-text">Monday: 12pm – 5pm</p>
+                                  <p class = "card-text">Tuesday: 12pm – 5pm</p>
+                                  <p class="card-text">Wednesday: 12pm – 5pm</p>
+                                  <p class = "card-text">Thursday: 12pm – 5pm</p>
                                   <p class="card-text">Friday: Closed</p>
                                 </div>
                               </div>
